# labrom_mav

./: .gitignore  README.md
blind_action/: CMakeLists.txt  package.xml
blind_action/action/: Climb.action  Landing.action  TakeOff.action
blind_action/include/blind_action/: blind.h  climb_client.h  climb_server.h  landing_client.h  landing_server.h  take_off_client.h  take_off_server.h
blind_action/nodes/: blind_landing.cpp  blind_mission.cpp  blind_node.cpp
blind_action/src/: blind.cpp  climb_client.cpp  climb_server.cpp  landing_client.cpp  landing_server.cpp  take_off_client.cpp  take_off_server.cpp
labrom_asctec_interface/: CMakeLists.txt  package.xml
labrom_asctec_interface/include/labrom_asctec_interface/: mav_ctrl.h
labrom_asctec_interface/launch/: commands.launch  ctrl_node.launch  fcu.launch  interface.launch  sensors.launch
labrom_asctec_interface/nodes/: mav_ctrl.cpp
labrom_asctec_interface/params/: fcu_parameters.yaml  philips.yaml  ssdk_parameters.yaml
labrom_asctec_interface/src/: node.cpp
labrom_mav_blind_action/: .gitignore  CMakeLists.txt  package.xml
labrom_mav_blind_action/action/: Landing.action  TakeOff.action
labrom_mav_blind_action/include/labrom_mav_blind_action/: blind.h  landing_client.h  landing_server.h  take_off_client.h  take_off_server.h
labrom_mav_blind_action/launch/: blind.launch
labrom_mav_blind_action/src/: blind.cpp  landing_client.cpp  landing_server.cpp  take_off_client.cpp  take_off_server.cpp
labrom_mav_common/: CMakeLists.txt  package.xml
labrom_mav_common/include/labrom_mav_common/: conversions.h  pid.hpp  typedef.h
labrom_mav_common/msg/: MavCmd.msg  TeleOpCmd.msg
labrom_mav_common/src/: conversions.cpp
labrom_mav_control/: CMakeLists.txt  package.xml
labrom_mav_control/include/labrom_mav_control/: PoseLinear.h  mav_manager.h  pose_linear.h  position_linear.h  velocity_linear.h
labrom_mav_control/launch/: pelican.launch  velocity_linear.launch  vrep.launch  vrep_pose.launch  vrep_velocity.launch
labrom_mav_control/nodes/: mav_manager.cpp  velocity_linear.cpp
labrom_mav_control/params/: crazyflie.yaml  pelican.yaml  previous.yaml  vrep.yaml
labrom_mav_control/src/: PoseLinear.cpp  pose_linear.cpp  position_linear.cpp  velocity_linear.cpp
labrom_mav_demos/: CMakeLists.txt  package.xml
labrom_mav_demos/launch/: apriltag.launch  crazy_camera.launch  crazyflie.launch  crazyflie_active.launch  crazyflie_hand.launch  crazyflie_vrpn.launch  mv_bluefox_camera.launch  pelican.launch  vrep.launch  vrep_backup.launch
labrom_mav_demos/params/: crazy_camera.yaml  crazyflie_camera_calibration.yaml  crazyflie_ekf.yaml  mvBlueFox_camera_calibration.yaml  vrep_camera_calibration.yaml  vrep_ekf.yaml
labrom_mav_interface/: CMakeLists.txt  package.xml
labrom_mav_interface/include/labrom_mav_interface/: crazyflie_interface.h  joy_interface.h  pelican_interface.h  vrep_interface.h  vrpn_interface.h
labrom_mav_interface/nodes/: crazyflie_interface.cpp  joy_interface.cpp  pelican_interface.cpp  print.cpp  vrep_interface.cpp  vrpn_interface.cpp
labrom_mav_manager/: CMakeLists.txt  manager.launch  package.xml
labrom_mav_manager/action/: Landing.action
labrom_mav_manager/doc/: manifest.yaml
labrom_mav_manager/doc/html/: dir_000000_000001.html  dir_000003_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8637afc38b758fdb535647a385c49b5e.html  dir_8637afc38b758fdb535647a385c49b5e_dep.map  dir_8637afc38b758fdb535647a385c49b5e_dep.md5  dir_97ddc41e52d1e447e1e17d15bc095883.html  dir_97ddc41e52d1e447e1e17d15bc095883_dep.map  dir_97ddc41e52d1e447e1e17d15bc095883_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index-msg.html  index.html  manager_8cpp.html  manager_8cpp__incl.map  manager_8cpp__incl.md5  manager_8cpp_source.html  manager_8h.html  manager_8h__dep__incl.map  manager_8h__dep__incl.md5  manager_8h_source.html  manager__node_8cpp.html  manager__node_8cpp__incl.map  manager__node_8cpp__incl.md5  manager__node_8cpp_source.html  namespacemanager.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  pages.html  todo.html
labrom_mav_manager/include/labrom_mav_manager/: blind.h  landing_client.h  landing_server.h  manager.h  state_machine.h  take_off_client.h  take_off_server.h
labrom_mav_manager/launch/: manager.launch  mav_manager.launch
labrom_mav_manager/nodes/: manager.cpp  manager_node.cpp
labrom_mav_manager/params/: vrep.yaml
labrom_mav_manager/src/: blind.cpp  landing_client.cpp  landing_server.cpp  manager.cpp  state_machine.cpp  take_off_client.cpp  take_off_server.cpp
labrom_mav_planner/: CMakeLists.txt  package.xml
labrom_mav_planner/include/labrom_mav_planner/: keyboard_teleop.h
labrom_mav_planner/launch/: planner.launch
labrom_mav_planner/nodes/: planner_node.cpp  planner_node.h
labrom_mav_planner/src/: keyboard_teleop.cpp
labrom_mav_state_estimation/: CMakeLists.txt  package.xml
labrom_mav_state_estimation/launch/: aprilTag.launch  estimation.launch  pelican.launch  tf.launch  vrep.launch
labrom_mav_state_estimation/params/: april_tags.yaml  ekf_landmark.yaml  ekf_odom.yaml  vrep.yaml
labrom_mav_state_estimation/params/pelican/: ekf_landmark.yaml  ekf_odom.yaml  optical_flow.yaml
labrom_mav_state_estimation/params/philips/: april_tags.yaml  ekf_landmark.yaml  ekf_odom.yaml  optical_flow.yaml
labrom_mav_state_estimation/params/vrep/: april_tags.yaml  ekf_landmark.yaml  ekf_odom.yaml  optical_flow.yaml
