<?xml version="1.0"?>
<package>
  <name>labrom_mav_control</name>
  <version>0.0.0</version>
  <description>Autonomous controllers for quadrotors</description>

 <maintainer email="romulortr@gmail.com">Rômulo T. Rodrigues</maintainer>

 <license>GPLv3</license>

 <author email="romulortr@gmail.com">Rômulo T. Rodrigues</author> -->

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>labrom_control</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>labrom_control</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>