<?xml version="1.0"?>
<package>
  <name>labrom_mav_interface</name>
  <version>0.0.0</version>
  <description>The labrom_mav_interface package</description>

  <maintainer email="romulortr@gmail.com">Romulo T Rodrigues</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>  
  <build_depend>labrom_mav_common</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>    
  <run_depend>labrom_mav_common</run_depend>
  <run_depend>nav_msgs</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
