<?xml version="1.0"?>
<package>
  <name>labrom_mav_state_estimation</name>
  <version>0.0.0</version>
  <description>The labrom_mav_state_estimation package</description>

  <maintainer email="aerialrobotteam@gmail.com">Aerial Robot Team (LabRoM)</maintainer>
  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/labrom_mav_state_estimation</url> -->


  <author email="romulortr@usp.br">Rômulo Rodrigues</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <run_depend>robot_localization</run_depend>


  <export>


  </export>
</package>
